[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DPP"
version = "0.1.0"
description = "A collection of helper functions and CLI tools to make preprocessing and cleaning with das easy and fun"
readme = "README.md"
requires-python = ">=3.12"
license =  "GPL-3.0-or-later"
authors = [
    { name = "Calder Robinson", email = "calder.robinson@ntnu.no" }
]

dependencies = [
    "h5py==3.15.1",
    "imageio==2.37.0",
    "logger==1.4",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "Pillow==12.0.0",
    "scipy==1.16.2",
    "sympy==1.14.0",
]

[project.scripts]
DASprocessParalelle = "dpp.DASprocessParalelle:main"
DAScleaner = "dpp.DAScleaner:main"
ExampleInI = "dpp.config_test:main"

[project.urls]
Homepage = "https://github.com/CLRWhales/DPP"

[tool.setuptools]
packages = ["dpp"]