[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DPP"
version = "0.3.0"
description = "A collection of helper functions and CLI tools to make preprocessing and cleaning with das easy and fun"
readme = "README.md"
requires-python = ">=3.12"
license =  "GPL-3.0-or-later"
authors = [
    { name = "Calder Robinson", email = "calder.robinson@ntnu.no" }
]

dependencies = [
    "h5py==3.15.1",
    "imageio==2.37.0",
    "logger==1.4",
    "matplotlib==3.10.8",
    "memory_profiler==0.61.0",
    "numpy==2.4.2",
    "pandas==3.0.0",
    "Pillow==12.1.0",
    "psutil==7.2.2",
    "pyproj==3.7.2",
    "Requests==2.32.5",
    "scipy==1.17.0",
    "Shapely==2.1.2",
    "sympy==1.14.",
]

[project.scripts]
DASprocessParalelle = "dpp.DASprocessParalelle:main"
DAScleaner = "dpp.DAScleaner:main"
ExampleInI = "dpp.config_test:main"

[project.urls]
Homepage = "https://github.com/CLRWhales/DPP"

[tool.setuptools]
packages = ["dpp"]